[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/11_ReportDay.gd" type="Script" id=1]
[ext_resource path="res://images/browncat.png" type="Texture" id=2]
[ext_resource path="res://prefab/GameStatus.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Chunkfive Ex.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/TangoSans_Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/bg.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="Node2D5" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -66.0 ],
"_edit_vertical_guides_": [ -59.0 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 301 )
texture = ExtResource( 6 )

[node name="GameStatus" parent="Background" instance=ExtResource( 3 )]
margin_left = -371.0
margin_top = -264.0
margin_right = -236.0
margin_bottom = -216.0

[node name="EndofDay" type="Label" parent="Background"]
margin_left = -147.0
margin_top = -162.0
margin_right = 318.0
margin_bottom = -121.0
custom_fonts/font = SubResource( 1 )
text = "End of Day ## Report"
align = 1
valign = 1

[node name="Browncat" type="Sprite" parent="Background"]
position = Vector2( -347, 43 )
scale = Vector2( 0.915427, 0.901961 )
texture = ExtResource( 2 )

[node name="Next" type="Button" parent="Background"]
margin_left = 21.0
margin_top = 114.0
margin_right = 158.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 2 )
text = "NEXT"

[node name="NumPokeBowls" type="Label" parent="Background"]
margin_left = -142.0
margin_top = -69.0
margin_right = -76.0
margin_bottom = -38.0
custom_colors/font_color = Color( 0.14902, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 3 )
text = "##"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PokeBowls" type="Label" parent="Background"]
margin_left = -68.0
margin_top = -70.0
margin_right = 148.0
margin_bottom = -39.0
custom_colors/font_color = Color( 0.14902, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 3 )
text = "Poke Bowls Sold"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NumLikes" type="Label" parent="Background"]
margin_left = -142.0
margin_top = -20.0
margin_right = -76.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.14902, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 3 )
text = "##"
align = 1
valign = 1

[node name="Likes" type="Label" parent="Background"]
margin_left = -68.0
margin_top = -19.0
margin_right = 341.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.14902, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 3 )
text = "Likes on your Meowspace page"
align = 1
valign = 1

[node name="GreatJob" type="Label" parent="Background"]
margin_left = -19.0
margin_top = 46.0
margin_right = 191.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.14902, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 3 )
text = "Great job!"
align = 1
valign = 1

[connection signal="pressed" from="Background/Next" to="." method="_on_Button_pressed"]
